--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- Critical for mobile-first responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PWA Tools Hub</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <style>
-        /* Global styles based on TitanZip's dark theme */
         :root {
             --background-color: #121212;
             --surface-color: #1e1e1e;
@@ -26,7 +24,7 @@
         html, body {
             width: 100%;
             height: 100%;
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            overflow: hidden; /* Prevent body scroll */
         }
 
         body {
@@ -38,14 +36,25 @@
         #app {
             width: 100%;
             height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        
+        #page-container {
+            flex-grow: 1; /* Take up remaining space */
+            overflow-y: auto; /* Allow pages to scroll independently */
+            padding-top: 60px; /* IMPORTANT: Prevents content from being hidden under the fixed header */
         }
     </style>
 </head>
 <body>
-    <!-- The entire application will be rendered inside this single div -->
-    <div id="app"></div>
+    <div id="app">
+        <!-- New dedicated container for the global header -->
+        <div id="header-container"></div>
+        <!-- Container for all page content that will be swapped out -->
+        <div id="page-container"></div>
+    </div>
 
-    <!-- The main controller script for the entire PWA -->
     <script type="module" src="app.js"></script>
 </body>
 </html>
