--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
             background-color: var(--background-color);
             color: var(--primary-text-color);
         }
+        /* No padding needed as the menu button is a fixed overlay */
         #page-container {
-            /* Adjust padding to account for the new combined navbar height (50px + 48px) */
-            padding-top: 98px;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <!-- The single container for the new unified navigation bar -->
-    <div id="nav-container"></div>
+    <!-- Container for the menu button and its overlay -->
+    <div id="menu-container"></div>
     
-    <!-- The container for all switchable page content -->
+    <!-- Container for all switchable page content -->
     <div id="page-container"></div>
 
     <!-- External library for zip/unzip functionality -->
