--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Titan Developer</title>
     <style>
         :root {
@@ -13,10 +13,7 @@
             --accent-color: #007AFF;
             --border-color: #333333;
         }
-        /* --- FIX: Global box-sizing rule --- */
-        * {
-            box-sizing: border-box;
-        }
+        * { box-sizing: border-box; }
         body, html {
             margin: 0;
             padding: 0;
@@ -25,25 +22,23 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             background-color: var(--background-color);
             color: var(--primary-text-color);
-            overflow: hidden; /* Prevent the body from scrolling */
+            overflow: hidden; /* Prevent body scrolling */
         }
         #page-container {
             width: 100%;
             height: 100%;
-            overflow-y: auto; /* This container is now the scrolling element */
-            padding-top: 70px; /* Space for the fixed header */
+            overflow-y: auto;
+            /* Prevent content from being hidden by the bottom bar */
+            padding-bottom: 90px; 
         }
     </style>
 </head>
 <body>
-    <!-- Container for the new slim header bar -->
-    <div id="header-container"></div>
-    
-    <!-- Container for the menu button and its overlay -->
-    <div id="menu-container"></div>
-    
-    <!-- This container now scrolls its content -->
+    <!-- Container for all switchable page content -->
     <div id="page-container"></div>
+
+    <!-- Container for the fixed bottom navigation bar -->
+    <div id="bottom-bar-container"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script type="module" src="app.js"></script>
