--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@
             color: var(--primary-text-color);
             overflow: hidden;
         }
-        #page-container {
+        /* This is now the main app container */
+        #app {
             width: 100%;
             height: 100%;
             overflow-y: auto;
+            /* Give space at the bottom for the fixed nav bar */
             padding-bottom: 90px;
         }
     </style>
 </head>
 <body>
-    <div id="page-container"></div>
+    <!-- CORRECTED ID: Changed from "page-container" to "app" -->
+    <div id="app"></div>
     <div id="bottom-bar-container"></div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
-
 
