--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Titan Developer</title>
     <style>
         :root {
-            /* --- CHANGE: Updated to a dark grey --- */
             --background-color: #121212;
             --surface-color: #1e1e1e;
             --primary-text-color: #ffffff;
@@ -25,23 +24,31 @@
             color: var(--primary-text-color);
             overflow: hidden;
         }
-        /* This is now the main app container */
         #app {
             width: 100%;
             height: 100%;
             overflow-y: auto;
-            /* Give space at the bottom for the fixed nav bar */
             padding-bottom: 90px;
         }
+
+        /* --- NEW: Global Page Fade-in Animation --- */
+        @keyframes pageFadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .page-content-wrapper {
+            animation: pageFadeIn 0.3s ease-out forwards;
+        }
+
     </style>
 </head>
 <body>
-    <!-- CORRECTED ID: Changed from "page-container" to "app" -->
     <div id="app"></div>
     <div id="bottom-bar-container"></div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
